--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+## dep
+vendor
+
+## serverless
+bin/*
+.serverless
+
+## environment
+.env
