--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/eawsy/aws-lambda-go-net"
   version = "1.0.0-beta.1"
+
+[[constraint]]
+  branch = "master"
+  name = "google.golang.org/api"
