--- a/serverless.yml
+++ b/serverless.yml
@@ -37,6 +37,13 @@ functions:
       - http:
           path: api/dump/{uid}
           method: get
+          cors: true
       - http:
           path: api/fetch/{uid}
           method: get
+          cors: true
+      - http:
+          path: api/upload/{uid}
+          method: post
+          cors: true
+
