적당히 구현

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ export TWITTER_CONSUMER_KEY=todo
 export TWITTER_CONSUMER_SECRET=todo
 export TWITTER_ACCESS_TOKEN=todo
 export TWITTER_ACCESS_TOKEN_SECRET=todo
+
+export GOOGLE_CLIENT_ID=todo
+export GOOGLE_CLIENT_SECRET=todo
