--- a/webview/tsconfig.json
+++ b/webview/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
+    "baseUrl": "serina",
     "lib": [
       "es6",
       "dom"
