--- a/webview/package.json
+++ b/webview/package.json
@@ -6,6 +6,9 @@
     "@types/webpack-env": "^1.13.5",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-json-tree": "^0.11.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.14.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.1"
@@ -22,6 +25,9 @@
     "@types/node": "^9.6.2",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
+    "@types/react-json-tree": "^0.6.7",
+    "@types/react-router": "^4.0.23",
+    "@types/react-router-dom": "^4.2.6",
     "typescript": "^2.8.1"
   }
 }
