--- a/webview/package.json
+++ b/webview/package.json
@@ -1,18 +1,7 @@
 {
   "name": "cli",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/webpack-env": "^1.13.5",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-json-tree": "^0.11.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts-ts": "2.14.0",
-    "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.79.1"
-  },
+  "private": false,
   "homepage": "https://libsora.so/serina/",
   "scripts": {
     "start": "react-scripts-ts start",
@@ -20,14 +9,33 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
+  "dependencies": {
+    "@types/webpack-env": "^1.13.5",
+    "raven-for-redux": "^1.3.1",
+    "raven-js": "^3.24.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-json-tree": "^0.11.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "5.0.0-alpha.9",
+    "react-scripts-ts": "2.14.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1"
+  },
   "devDependencies": {
     "@types/jest": "^22.2.0",
     "@types/node": "^9.6.2",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "@types/react-json-tree": "^0.6.7",
+    "@types/react-redux": "^5.0.15",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-redux": "^5.0.13",
     "typescript": "^2.8.1"
   }
 }
