redux 기반으로 대강 굴러가도록. 버튼 연결은 안함

--- a/webview/package.json
+++ b/webview/package.json
@@ -23,6 +23,8 @@
     "react-scripts-ts": "2.14.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.1"
   },
@@ -36,6 +38,7 @@
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-router-redux": "^5.0.13",
+    "@types/redux-logger": "^3.0.5",
     "typescript": "^2.8.1"
   }
 }
