--- a/webview/package.json
+++ b/webview/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
     "react-scripts-ts": "2.14.0",
+    "react-tweet-embed": "^1.1.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
