--- a/webview/package.json
+++ b/webview/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@types/webpack-env": "^1.13.5",
+    "file-saver": "^1.3.8",
+    "jszip": "^3.1.5",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.24.1",
     "react": "^16.3.1",
@@ -30,7 +32,9 @@
     "semantic-ui-react": "^0.79.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^1.3.0",
     "@types/jest": "^22.2.0",
+    "@types/jszip": "^3.1.3",
     "@types/node": "^9.6.2",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
