--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "serina",
+  "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "homepage" : "http://libsora.so/serina",
   "dependencies": {
-    "@types/jest": "24.0.15",
+    "@types/jest": "^24.0.15",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "file-saver": "^2.0.2",
+    "firebase": "^6.3.0",
+    "jszip": "^3.2.2",
+    "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-tweet-embed": "^1.2.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -32,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.1",
+    "@types/jszip": "^3.1.6",
+    "@types/lodash": "^4.14.136",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/twitter": "^1.7.0"
   }
 }
